# code-catalyst

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: branch-protection.yml  ci.yml  release.yml
mcp_server/: README.md  logging_config.json  package.json  server.py  standalone.py
src/: main.py
tests/: test_placeholder.py
